--- a/android/app/src/main/res/drawable/launch_background.xml
+++ b/android/app/src/main/res/drawable/launch_background.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?><!-- Modify this file to customize your launch splash screen -->
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/splashscreen_background_color" />
+    <item android:drawable="@color/splash_color" />
 
     <!-- You can insert your own image assets here -->
     <item
-        android:drawable="@drawable/ic_nightmare"
+        android:drawable="@color/splash_color"
         android:gravity="center" />
+    <item>
+        <bitmap android:gravity="center" android:src="@drawable/splash" />
+    </item>
+
 </layer-list>
+
