--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -6,5 +6,7 @@
              Flutter draws its first frame -->
         <item name="android:windowBackground">@drawable/launch_background</item>
         <item name="android:defaultFocusHighlightEnabled">false</item>
+        <item name="android:windowFullscreen">true</item>
+
     </style>
 </resources>
